--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TwoActivities">
-        <activity android:name=".ThirdActivity"></activity>
-        <activity android:name=".HelloToastActivity" />
-        <activity android:name=".TextActivity" />
+        <activity android:name=".HomeworkActivity"></activity>
+        <activity android:name=".AddItemActivity" />
+        <activity android:name=".ShoppingListActivity" />
         <activity
             android:name=".SecondActivity"
             android:label="@string/activity2_name"
